--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     image: postgres:14
     environment:
       - POSTGRES_USER=app
-      - POSTGRES_PASSWORD=app
+      - POSTGRES_PASSWORD=password@123
     # ports:
     #   - 5432:5432
     volumes:
